# express_ex

./: .clang-format  .clang-tidy  .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  ExpressUtils.cmake  gen_data.py  plotter.py  readme.md  rules.txt  setup.bat  temp.drawio  to_do_list.rst  todolist.md
EGrammar/: CMakeLists.txt  EGrammar.g4  EGrammar.interp  EGrammar.tokens  EGrammarBaseListener.cpp  EGrammarBaseListener.h  EGrammarLexer.cpp  EGrammarLexer.h  EGrammarLexer.interp  EGrammarLexer.tokens  EGrammarListener.cpp  EGrammarListener.h  EGrammarParser.cpp  EGrammarParser.h  ELex.g4  default.css  updateGramar.bat
compiler_ex/: compiler_ex.sln
compiler_ex/compiler_ex/: PropertySheet.props  formula2.kex
compiler_ex/source/jit/hdr/: CommandLineArgParser.h  IO.h  IR_generator.h  LibInterface.h  Types.h  block.h  ioIfs.h  resource.h  table.h
compiler_ex/source/jit/src/: IO.cpp  Main.cpp  (+6 more)
compiler_ex/x64/Debug/: compiler_ex.exp  compiler_ex.lib  stdlib.kex
compiler_ex/x64/Release/: A01_3.json  formula.kex  formula.txt  formula2.kex  formula_light.kex  linear.kex  run.bat  run2.bat
doc/: CMakeLists.txt
doc/source/: code_gen_steps.puml  code_gen_steps.rst  conf.py  index.rst  table.rst  table_graph.dot  table_graph.xml
doc/source/trash/: code_gen_steps.puml  operation_ifs.puml  table_graph.dot  table_graph.xml
express_ex/: .clang-format  CMakeLists.txt  CMakeMacro.txt  cmake_.bat  readme.md  remove.bat
express_ex/Debug/: formula2.kex
express_ex/Release/: a01_dat.py  formula2.kex  formula_light.kex  li.kex  li2.kex  linear.kex
express_ex/app/: CMakeLists.txt  main.cpp
express_ex/include/common/: ErrorIoIfs.h  common.h  errors.h  types_jty.h  undefWarningIgnore.h
express_ex/include/ifs/: AsyncParameter.h  ExStream.h  ExStreamIfs.h  ParameterIO.h  ParameterIfs.h  SyncParameter.h  config.h  express_ex.h  ioIfs.h  parameterIO.h  printIfs.h  printer.h
express_ex/include/jit/: CL_generator.h  IR_generator.h  TableGenContext.h  buffer.h  llvmHdrs.h  orcjit.h  table.h
express_ex/include/operations/: ArithmeticOperation.h  BuiltInCallOperation.h  ComparisonOperation.h  ConvolveOperation.h  ExConstArray.h  ExConstValue.h  ExLine.h  ExValue.h  ExValue_ifs.h  IntegrateOperation.h  OpCode.def  Operation_ifs.h  SelectOperation.h  SmallArrayDefOperation.h  TypeCastOperation.h  callTemplate.h  operations.h
express_ex/include/parser/: ExValue.h  KexParser.h  basic.h  body.h  bodyTemplate.h  call.h  callTemplate.h  common.h  defWarningIgnore.h  line.h  operations.h  parsingException.h  treeShapeListener.h  types_jty.h  variable.h
express_ex/io_ex/: CMakeLists.txt  FolderIoInterface.h
express_ex/lib/KexParser/: KexParser.cpp  errors.cpp  treeShapeListener.cpp  treeShapeListener.h
express_ex/lib/common/: common.cpp
express_ex/lib/ifs/: AsyncParameter.cpp  ErrorsIo.cpp  Intervals.h  ParameterIO.cpp  SyncParameter.cpp  express_ex.cpp  printer.cpp  printer.h
express_ex/lib/jit/: CL_generator.cpp  CL_generator.h  IR_generator.cpp  TableGenContext.cpp  context.сpp  getWin32Intrinsinc.cpp  table.cpp
express_ex/lib/operations/: ArithmeticOperation.cpp  ArithmeticOperation.h  BuiltInCallOperation.cpp  BuiltInCallOperation.h  ComparisonOperation.cpp  ComparisonOperation.h  ConvolveOperation.cpp  ConvolveOperation.h  ExConstArray.cpp  ExConstValue.cpp  ExLine.cpp  ExValue_ifs.cpp  IntegrateOperation.cpp  IntegrateOperation.h  NeighborPointOperation.cpp  NeighborPointOperation.h  Operation_ifs.cpp  RecurrenceRelationTemplate.cpp  RecurrenceRelationTemplate.h  RecursiveNeighborPointOperation.cpp  RecursiveNeighborPointOperation.h  SelectOperation.cpp  SelectOperation.h  SmallArrayDefOperation.cpp  SmallArrayDefOperation.h  TernaryOperation.cpp  TernaryOperation.h  TypeCastOperation.cpp  TypeCastOperation.h
express_ex/lib/operations/FunctionCall/: CallRecursiveFunction.cpp  CallRecursiveFunction.h  CallRecursiveFunctionTemplate.cpp  CallTemplate.cpp  call.cpp  call.h
express_ex/lib/parser/: ExLine.cpp  ExValue.cpp  basic.cpp  body.cpp  bodyTemplate.cpp  call.cpp  line.cpp  newOp.cpp  operations.cpp  variable.cpp
express_ex/sources/ifs/: AsyncParameter.cpp  Intervals.h  ParameterIO.cpp  SyncParameter.cpp  express_ex.cpp  ioIfs.cpp  printIfs.cpp  printer.cpp
express_ex/sources/jit/: CL_generator.cpp  IR_generator.cpp  ioIfs.cpp  table.cpp
express_ex/sources/operations/: ArithmeticOperation.cpp  BuiltInCallOperation.cpp  ComparisonOperation.cpp  ConvolveOperation.cpp  IntegrateOperation.cpp  Operation_ifs.cpp  SelectOperation.cpp  SmallArrayDefOperation.cpp  TypeCastOperation.cpp
express_ex/sources/parser/: basic.cpp  body.cpp  bodyTemplate.cpp  call.cpp  common.cpp  cpp_parser.cpp  errors.cpp  line.cpp  main.cpp  newOp.cpp  operations.cpp  table.cpp  treeShapeListener.cpp  variable.cpp
express_ex/test/: CMakeLists.txt  base_RK_1008.base  ex_lib.py  ex_test.py  temp.ll  test_exec.py  test_tasks.py
express_ex/test/async/: calc.express  double_async_f4src.kex  double_async_f8src.kex  output.ll  single_async_f8src.kex  test.bat
express_ex/test/sync/: function.kex  integrate.kex  loop.kex  miscellaneous.kex  multi_arg.kex  multi_arg_cos.kex  output.ll  output_ref.ll  recurrence_relation.kex  single_arg_convolve.kex  sync_base.base  sync_base.express  ternary.kex  test.bat  test_tasks.py
io_ex/: CMakeLists.txt  DatasetsStorage_ifs.cpp  DatasetsStorage_ifs.h  FolderIoInterface.cpp  FolderIoInterface.h  Hdf5IoInterface.cpp  Hdf5IoInterface.h
syntaxhighlighter/: CMakeLists.txt  highlightListener.h  highlighter.h  main.cpp  mainWindow.cpp  mainwindow.h  syntaxhighlighter.pro  textEdit.cpp  textEdit.h
syntaxhighlighter/include/: highlightListener.h  highlightStyle.h  highlighter.h  mainwindow.h  textEdit.h
syntaxhighlighter/sources/: highlighter.cpp  mainWindow.cpp  textEdit.cpp
topsyntaxhighlighter/: CMakeLists.txt  config.pri  resource.qrc  textEdit.h  topsyntaxhighlighter.pro
topsyntaxhighlighter/include/bac/: highlightStyle.h  highlighter.h  tree.h
topsyntaxhighlighter/sources/: highlighter.cpp  main.cpp  mainWindow.cpp  textEdit.cpp  tree.cpp
(+19 files in other folders)
